unpackaged/main/default/objects/Library_Issue_Ret_Item__c/Library_Issue_Ret_Item__c.object-meta.xml
<CustomObject>
    <description>This Object is used to issue/return  Library Item(Books/)</description>
    <label>Issue/Return Item</label>
    <nameField>
        <displayFormat>Item-{00000}</displayFormat>
        <label>Item Issue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue/Return Item(s)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>