unpackaged/main/default/objects/Library_Issue_Ret_Item__c/fields/Actual_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Return_Date__c</fullName>
    <description>This is the actual date on which Item was returned</description>
    <label>Actual Return Date</label>
    <type>Date</type>
</CustomField>