unpackaged/main/default/objects/Library_Issue_Ret_Item__c/fields/is_expired__c.field-meta.xml
<CustomField>
    <fullName>is_expired__c</fullName>
    <formula>if(Expected_Return_Date__c&lt;Today() &amp;&amp; text(Status__c)==&#39;Issued&#39; ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is expired</label>
    <type>Checkbox</type>
</CustomField>