unpackaged/main/default/objects/Library_Issue_Ret_Item__c/fields/is_Issued__c.field-meta.xml
<CustomField>
    <fullName>is_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This would be checked when status =issued</description>
    <label>is Issued</label>
    <type>Checkbox</type>
</CustomField>