unpackaged/main/default/objects/Library_Issue_Ret_Item__c/fields/is_Lost__c.field-meta.xml
<CustomField>
    <fullName>is_Lost__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checked when status=Lost</description>
    <label>is Lost</label>
    <type>Checkbox</type>
</CustomField>