unpackaged/main/default/objects/Library_Issue_Ret_Item__c/fields/is_Returned__c.field-meta.xml
<CustomField>
    <fullName>is_Returned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This would be checked when status=returned and would b used to RollUp</description>
    <label>is Returned</label>
    <type>Checkbox</type>
</CustomField>