unpackaged/main/default/objects/Library_Issue_Ret_Item__c/fields/Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Issued_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Issued By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Issue_Return_Item_s</relationshipName>
    <type>Lookup</type>
</CustomField>