unpackaged/main/default/objects/Library_Issue_Ret_Item__c/fields/Issued_To__c.field-meta.xml
<CustomField>
    <fullName>Issued_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Issued To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Issue/Return Item(s)</relationshipLabel>
    <relationshipName>Issue_Return_Item_s</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>