unpackaged/main/default/objects/Library_Issue_Ret_Item__c/fields/Library_Item__c.field-meta.xml
<CustomField>
    <fullName>Library_Item__c</fullName>
    <label>Library Item</label>
    <referenceTo>Library_Item__c</referenceTo>
    <relationshipLabel>Issue/Return Item(s)</relationshipLabel>
    <relationshipName>Issue_Return_Item_s</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>