unpackaged/main/default/objects/Library_Issue_Ret_Item__c/fields/Ratings__c.field-meta.xml
<CustomField>
    <fullName>Ratings__c</fullName>
    <label>Rate Points</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>