unpackaged/main/default/objects/Library_Issue_Ret_Item__c/fields/RatingsFormula__c.field-meta.xml
<CustomField>
    <fullName>RatingsFormula__c</fullName>
    <formula>IMAGE(
IF(TEXT(Ratings__c) = &#39;0&#39;, &quot;/img/samples/stars_000.gif&quot;,
IF(TEXT(Ratings__c) = &#39;1&#39;, &quot;/img/samples/stars_100.gif&quot;,
IF(TEXT(Ratings__c) = &#39;2&#39;, &quot;/img/samples/stars_200.gif&quot;,
IF(TEXT(Ratings__c) = &#39;3&#39;, &quot;/img/samples/stars_300.gif&quot;,
IF(TEXT(Ratings__c) = &#39;4&#39;, &quot;/img/samples/stars_400.gif&quot;,
IF(TEXT(Ratings__c) = &#39;5&#39;, &quot;/img/samples/stars_500.gif&quot;,
&quot;/img/samples/stars_000.gif&quot;
)))))),
&#39;Rating Level&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ratings</label>
    <type>Text</type>
</CustomField>