unpackaged/main/default/objects/Library_Issue_Ret_Item__c/fields/skip_Fine__c.field-meta.xml
<CustomField>
    <fullName>skip_Fine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>skip Fine?</label>
    <type>Checkbox</type>
</CustomField>