unpackaged/main/default/objects/Library_Issue_Ret_Item__c/validationRules/Actual_Date_cannot_be_a_Futur_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Date_cannot_be_a_Futur_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Actual_Return_Date__c &gt;Today()</errorConditionFormula>
    <errorDisplayField>Actual_Return_Date__c</errorDisplayField>
    <errorMessage>Actual Return Date cannot be a Future Date</errorMessage>
</ValidationRule>