unpackaged/main/default/objects/Library_Issue_Ret_Item__c/validationRules/Actual_Date_cannot_be_before_Issue_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Date_cannot_be_before_Issue_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Actual_Return_Date__c &lt; Issue_Date__c</errorConditionFormula>
    <errorDisplayField>Actual_Return_Date__c</errorDisplayField>
    <errorMessage>Actual Return Date cannot be before Issue Date</errorMessage>
</ValidationRule>