unpackaged/main/default/objects/Library_Issue_Ret_Item__c/validationRules/Actual_Return_Date_reqd_for_Item_Return.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Return_Date_reqd_for_Item_Return</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Text(Status__c)==&#39;Returned&#39;,IsBlank( Actual_Return_Date__c ))</errorConditionFormula>
    <errorDisplayField>Actual_Return_Date__c</errorDisplayField>
    <errorMessage>Actual Return Date is Required when Item is Returned</errorMessage>
</ValidationRule>