unpackaged/main/default/objects/Library_Issue_Ret_Item__c/validationRules/Expcted_Date_cannot_be_before_IssueDate.validationRule-meta.xml
<ValidationRule>
    <fullName>Expcted_Date_cannot_be_before_IssueDate</fullName>
    <active>true</active>
    <errorConditionFormula>Expected_Return_Date__c &lt; Issue_Date__c</errorConditionFormula>
    <errorDisplayField>Expected_Return_Date__c</errorDisplayField>
    <errorMessage>Expected Return Date cannot be before Issue Date</errorMessage>
</ValidationRule>