unpackaged/main/default/objects/Library_Issue_Ret_Item__c/validationRules/New_Item_Status_cant_be_Returned.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Item_Status_cant_be_Returned</fullName>
    <active>true</active>
    <errorConditionFormula>and( ISNEW(), Text(Status__c)=&#39;Returned&#39; )</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>New Item cannot have status as [Returned]</errorMessage>
</ValidationRule>