unpackaged/main/default/objects/Library_Issue_Ret_Item__c/validationRules/Restrict_Item_Issue_for_No_Availability.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Item_Issue_for_No_Availability</fullName>
    <active>true</active>
    <description>This would be used to restrict issue if available Items are zero</description>
    <errorConditionFormula>and(Library_Item__r.Total_Available__c ==0, Text(Status__c)==&#39;Issued&#39; )</errorConditionFormula>
    <errorMessage>Cannot Issue Item as it is out of stock</errorMessage>
</ValidationRule>