unpackaged/main/default/objects/Library_Issue_Ret_Item__c/listViews/My_Issued_Items.listView-meta.xml
<ListView>
    <fullName>My_Issued_Items</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Issued Items</label>
</ListView>